Ghsd 99,100: Rooms and Property unit api
